--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "art"
+name = "padi-rca"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
@@ -19,6 +19,7 @@ dependencies = [
     "polars>=1.31.0",
     "loguru>=0.7.3",
     "rcabench>=1.0.19",
+    "typer>=0.16.0",
 ]
 [tool.uv.sources]
 dgl = { url = "https://data.dgl.ai/wheels/torch-2.4/dgl-2.4.0-cp312-cp312-manylinux1_x86_64.whl" }
