--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,10 +16,11 @@ dependencies = [
     "matplotlib>=3.10.3",
     "pyarrow>=20.0.0",
     "wandb>=0.20.1",
-    "polars>=1.31.0",
     "loguru>=0.7.3",
     "rcabench>=1.0.19",
     "typer>=0.16.0",
+    "rcabench-platform>=0.2.7",
+    "polars-lts-cpu>=1.31.0",
 ]
 [tool.uv.sources]
 dgl = { url = "https://data.dgl.ai/wheels/torch-2.4/dgl-2.4.0-cp312-cp312-manylinux1_x86_64.whl" }
