--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ dependencies = [
     "rcabench>=1.0.19",
     "typer>=0.16.0",
     "rcabench-platform>=0.3.3",
-    "polars-lts-cpu>=1.31.0",
+    "polars-lts-cpu==1.32.0",
 ]
 [tool.uv.sources]
 dgl = { url = "https://data.dgl.ai/wheels/torch-2.4/dgl-2.4.0-cp312-cp312-manylinux1_x86_64.whl" }
